--- a/data_and_line regressor.ipynb
+++ b/data_and_line regressor.ipynb
@@ -85,7 +85,6 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
     "Example1 = LearningPart.groupby('dteday')['cnt'].sum()\n",
     "plt.figure(figsize=(20, 10))\n",
     "plt.plot(Example1.index, Example1.values, marker = '.')\n",
@@ -101,7 +100,6 @@
     "plt.figure(figsize=(10, 20))\n",
     "plt.scatter(Example3['weekday'], Example3['cnt'], alpha=0.5)\n",
     "plt.show()\n",
-    "\"\"\"\n",
     "\n",
     "\n",
     "\n",
@@ -117,7 +115,6 @@
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
     "plt.title('Тепловая карта корреляций cnt')\n",
     "plt.show()\n",
-    "\"\"\"\n",
     "# for casual\n",
     "numeric_cols = ['temp', 'atemp', 'hum', 'windspeed', 'casual']\n",
     "corr_matrix = LearningPart[numeric_cols].corr()\n",
@@ -135,7 +132,7 @@
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
     "plt.title('Тепловая карта корреляций registered')\n",
     "plt.show()\n",
-    "\"\"\"\n",
+    "\n",
     "\"\"\"\n",
     "по тепловой карте сожно сделать вывод:\n",
     "1)Со всеми признаками корреляция cnt выше, чем у casual and registered по отдельности -> при обучении и тестировании их использовать не будем \n",
@@ -156,7 +153,6 @@
     "plt.title('Распределение аренд по дням недели')\n",
     "plt.show()\n",
     "\n",
-    "\"\"\"\n",
     "sns.boxplot(x='weathersit', y='cnt', data=LearningPart)\n",
     "plt.title('Распределение аренд по выходным')\n",
     "plt.show()\n",
@@ -167,8 +163,7 @@
     "\n",
     "sns.boxplot(x='holiday', y='cnt', data=LearningPart)\n",
     "plt.title('Распределение аренд по праздникам')\n",
-    "plt.show()\n",
-    "\"\"\""
+    "plt.show()"
    ]
   },
   {
@@ -215,7 +210,6 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
     "sns.regplot(x='temp', y='cnt', data=LearningPart,\n",
     "            line_kws={'color': 'red'}, \n",
     "            scatter_kws={'alpha': 0.2})\n",
@@ -232,8 +226,7 @@
     "            line_kws={'color': 'red'}, \n",
     "            scatter_kws={'alpha': 0.2})\n",
     "plt.title('Зависимость аренд от скорости ветра')\n",
-    "plt.show()\n",
-    "\"\"\"\n"
+    "plt.show()\n"
    ]
   },
   {
